<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="Google_Application_ID">ca-app-pub-6364103357009597~8992779026</string>
    <string name="LOADING">Loading...</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_description">CBT Exam Browser is a specialized web browser for Computer Based Tests (CBT), designed to maintain honesty and security during online examinations. This application is developed to support exam systems in schools, universities, and other educational institutions.</string>
    <string name="about_feature_1">1. Secure Exam Mode — Prevents access to other apps, screenshots, and multitasking features.</string>
    <string name="about_feature_2">2. Custom School Domain — Each institution can use its own exam link.</string>
    <string name="about_feature_3">3. Configuration File (.cbt) — Exam settings can be automatically loaded from a configuration file.</string>
    <string name="about_features_title">Main Features</string>
    <string name="about_title">About Application — CBT Exam Browser</string>
    <string name="ad_mob_ad_badge">Ad</string>
    <string name="ads_loading_title">Preparing ads...</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">CBT Exam Browser</string>
    <string name="app_name_ujian">UJIAN</string>
    <string name="app_ver">v 6.3</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Ad ERID copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">ERID: %s</string>
    <string name="bigo_ad_feedback_copy_link">Copy link</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_link_copied">Link copied</string>
    <string name="bigo_ad_feedback_rec_rule">Recommendation Rules</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_user_privacy">Privacy</string>
    <string name="bigo_ad_feedback_why_this_ad">About this advertiser</string>
    <string name="bigo_ad_form_agree">I Agree</string>
    <string name="bigo_ad_form_cancel">Cancel</string>
    <string name="bigo_ad_form_privacy_content">By submitting this form, you agree to send your personal information to BIGO Ads and {company_name}. BIGO Ads and {company_name} will use this information in accordance with their own privacy policy. View BIGO’s Privacy Policy and {company_name}’s Privacy Policy.</string>
    <string name="bigo_ad_form_privacy_notice">Privacy Notice</string>
    <string name="bigo_ad_form_question_hint">Please Enter</string>
    <string name="bigo_ad_form_submit">Submit</string>
    <string name="bigo_ad_form_warning">The answer is required</string>
    <string name="bigo_ad_ic_application">Application</string>
    <string name="bigo_ad_ic_blank">%s</string>
    <string name="bigo_ad_ic_everyone">Everyone</string>
    <string name="bigo_ad_ic_recommended">Recommended</string>
    <string name="bigo_ad_ic_web">Web</string>
    <string name="bigo_ad_interaction_jump_hint">Jump to details page or third party app</string>
    <string name="bigo_ad_interaction_shake">Shake</string>
    <string name="bigo_ad_interaction_slide">Slide</string>
    <string name="bigo_ad_interaction_twist">Twist</string>
    <string name="bigo_ad_link_copied">Link copied</string>
    <string name="bigo_ad_lose_reward">You will lose your reward.</string>
    <string name="bigo_ad_multi_img_more_text">MORE</string>
    <string name="bigo_ad_resume">Resume</string>
    <string name="bigo_ad_skip">Skip</string>
    <string name="bigo_ad_skip_video">Skip video?</string>
    <string name="bigo_ad_splash_skip">SKIP</string>
    <string name="bigo_ad_splash_skip_after">Skip after</string>
    <string name="bigo_ad_tag">Ad</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_forward">bigo_ad_tag_forward</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="bigo_ad_tag_title">bigo_ad_tag_title</string>
    <string name="bigo_ad_title_default">Fantastic and interesting</string>
    <string name="bigo_ad_webview_loading">Loading</string>
    <string name="bigo_ad_word_icon_guid">Apps you may like</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_config_generate">Generate Config</string>
    <string name="btn_config_preview">PREVIEW CONFIG</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="btn_dialog_close">Close</string>
    <string name="btn_dialog_exit">Exit</string>
    <string name="btn_dialog_scanupdate_cancel">Cancel</string>
    <string name="btn_dialog_scanupdate_update">Update Now</string>
    <string name="btn_msk">ENTER</string>
    <string name="btn_msk_confirm">ENTER EXAM</string>
    <string name="btn_scanqr_masukujian">Enter Exam</string>
    <string name="btn_share_txt">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_permision">Camera permission required!</string>
    <string name="card_content_descriptor">card</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">f31f38f807b14339806066b7f6af5a1d</string>
    <string name="com.google.firebase.crashlytics.version_control_info">generate_error_reason: NO_SUPPORTED_VCS_FOUND\n</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="menu1">Input URL</string>
    <string name="txt_inputurl">Input url server to login exam</string>
</resources>