<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/inter_title_container"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">
        <sg.bigo.ads.common.view.RoundedImageView
            android:id="@+id/inter_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
        <TextView
            android:textSize="20sp"
            android:textColor="#ff333333"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:id="@+id/inter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bigo_ad_title_default"
            android:maxLines="1"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/inter_icon"/>
        <TextView
            android:textSize="13sp"
            android:textColor="#b3333333"
            android:ellipsize="end"
            android:gravity="left"
            android:id="@+id/inter_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bigo_ad_description_default"
            android:lines="1"
            android:layout_below="@+id/inter_title"
            android:layout_toEndOf="@+id/inter_icon"
            android:layout_alignStart="@+id/inter_title"/>
    </RelativeLayout>
    <Button
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:ellipsize="end"
        android:id="@+id/inter_btn_cta"
        android:background="#ff009dff"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/bigo_ad_cta_default"
        android:maxLines="1"
        android:layout_below="@+id/inter_title_container"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"/>
</RelativeLayout>
