<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inter_component_layout"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <sg.bigo.ads.common.view.RoundedImageView
        android:id="@+id/inter_icon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/inter_text_layout"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:layout_toRightOf="@+id/inter_icon">
        <TextView
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:id="@+id/inter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bigo_ad_title_default"
            android:maxLines="1"
            android:fontFamily="sans-serif-medium"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@android:color/white"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:id="@+id/inter_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/bigo_ad_description_default"
            android:maxLines="1"/>
    </LinearLayout>
    <Button
        android:textSize="14sp"
        android:textColor="#ff202124"
        android:ellipsize="end"
        android:id="@+id/inter_btn_cta"
        android:background="#ffffffff"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:text="@string/bigo_ad_cta_default"
        android:layout_toRightOf="@+id/inter_text_layout"
        android:textAllCaps="false"/>
    <sg.bigo.ads.ad.interstitial.multi_img.view.IconListView
        android:id="@+id/inter_download_msg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/inter_text_layout"/>
</RelativeLayout>
