<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/bt_close"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/grey_20"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_inputurl"
                android:textAlignment="center"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/input_layout_address"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/cardview_dark_background"
                    android:id="@+id/input_address"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="250dp"
                    android:minHeight="55dp"
                    android:hint="@string/menu1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
        <com.balysv.materialripple.MaterialRippleLayout
            android:gravity="center"
            android:id="@+id/btn_enter"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/RippleStyleWhite">
            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_msk"
                app:fontFamily="sans-serif-medium"/>
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
