<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_contain_view"
    android:background="@drawable/bigo_ad_splash_endpage_bg"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:clipChildren="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <sg.bigo.ads.common.view.RoundedFrameLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            app:bigo_ad_radius="6dp">
            <ImageView
                android:id="@+id/inter_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
        </sg.bigo.ads.common.view.RoundedFrameLayout>
        <TextView
            android:textSize="22sp"
            android:textColor="#333333"
            android:ellipsize="end"
            android:gravity="center"
            android:id="@+id/inter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/bigo_ad_title_default"
            android:maxLines="2"
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:textSize="13sp"
            android:textColor="#333333"
            android:ellipsize="end"
            android:gravity="center"
            android:id="@+id/inter_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/bigo_ad_description_default"
            android:maxLines="2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <include layout="@layout/bigo_ad_splash_endpage_item_cta"/>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:id="@+id/layout_playable_loading"
            android:paddingTop="20dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:indeterminateDrawable="@drawable/bigo_ad_progressbar_white"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="Playable ad will be shown soon"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:textSize="9sp"
        android:textColor="#ccffffff"
        android:gravity="center"
        android:layout_gravity="start|bottom"
        android:id="@+id/inter_ad_label"
        android:background="@drawable/bigo_ad_tag_background"
        android:paddingLeft="3dp"
        android:paddingTop="1dp"
        android:paddingRight="3dp"
        android:paddingBottom="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bigo_ad_tag"
        android:layout_marginStart="10dp"/>
    <sg.bigo.ads.api.AdOptionsView
        android:layout_gravity="end|bottom"
        android:id="@+id/inter_options"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"/>
</FrameLayout>
