<?xml version="1.0" encoding="utf-8"?>
<sg.bigo.ads.api.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inter_native_ad_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/inter_ad_info"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/inter_media_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <sg.bigo.ads.common.view.RoundedFrameLayout
            android:id="@+id/inter_media_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:bigo_ad_radius="8dp">
            <sg.bigo.ads.api.MediaView
                android:layout_gravity="center"
                android:id="@+id/inter_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_gravity="bottom|right"
                android:id="@+id/inter_btn_mute"
                android:background="@drawable/bigo_ad_ic_media_mute"
                android:visibility="invisible"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"/>
        </sg.bigo.ads.common.view.RoundedFrameLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:id="@+id/inter_ad_info_exclude_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:id="@+id/inter_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/bigo_ad_title_default"
                    android:lines="1"
                    android:fontFamily="sans-serif-medium"/>
                <TextView
                    android:textSize="13sp"
                    android:textColor="#888888"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:id="@+id/inter_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bigo_ad_description_default"
                    android:lines="2"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>
                <RelativeLayout
                    android:gravity="center"
                    android:id="@+id/bigo_ad_btn_class"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <Button
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:ellipsize="end"
                        android:id="@+id/inter_btn_cta_main"
                        android:background="@drawable/bigo_ad_button_bg_rectangle_green"
                        android:layout_width="168dp"
                        android:layout_height="44dp"
                        android:text="@string/bigo_ad_cta_default"
                        android:maxLines="1"
                        android:textAllCaps="false"/>
                    <sg.bigo.ads.common.view.RoundedFrameLayout
                        android:id="@+id/inter_btn_cta_layout"
                        android:layout_width="168dp"
                        android:layout_height="44dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/inter_btn_cta_main"
                        app:bigo_ad_radius="6dp">
                        <Button
                            android:textSize="14sp"
                            android:textColor="@android:color/white"
                            android:ellipsize="end"
                            android:id="@+id/inter_btn_cta"
                            android:background="@drawable/bigo_ad_button_bg_rectangle_blue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/bigo_ad_cta_default"
                            android:maxLines="1"
                            android:textAllCaps="false"/>
                    </sg.bigo.ads.common.view.RoundedFrameLayout>
                </RelativeLayout>
            </LinearLayout>
            <sg.bigo.ads.common.view.YandexWarningTextView
                android:textColor="#888888"
                android:gravity="top"
                android:id="@+id/inter_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textScaleX="0.3"
                android:maxLines="2"
                android:includeFontPadding="false"
                app:bigo_ad_maxTextSize="100sp"
                app:bigo_ad_minTextSize="10sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp">
        <sg.bigo.ads.api.AdOptionsView
            android:id="@+id/inter_options"
            android:layout_width="16dp"
            android:layout_height="16dp"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/bigo_ad_label_advertiser_background_raduis7"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp">
            <TextView
                android:textSize="9sp"
                android:textColor="#ccffffff"
                android:gravity="center"
                android:id="@+id/inter_ad_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bigo_ad_tag"/>
            <TextView
                android:textSize="9sp"
                android:textColor="#e9ebec"
                android:ellipsize="end"
                android:id="@+id/inter_advertiser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="240dp"
                android:text="bigoad.com"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
</sg.bigo.ads.api.NativeAdView>
